# VulkanSamples

./: .gitattributes  CMakeLists.txt  README.md
shaders/: blackhole.frag  blackhole.frag.spv  blackhole.vert  blackhole.vert.spv  dissolve.frag  dissolve.frag.spv  fractal.frag  fractal.frag.spv  lit.frag  lit.frag.spv  noise.frag  noise.frag.spv  pbr.frag  pbr.frag.spv  simple_shader.frag  simple_shader.frag.spv  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv
src/: AssetsSystem.cpp  AssetsSystem.h  CubeMap.cpp  CubeMap.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  buffer.cpp  camera.h  descriptors.cpp  descriptors.h  device.cpp  device.h  first_app.cpp  first_app.h  frame_info.h  game_object.cpp  game_object.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  main.cpp  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.h  swap_chain.cpp  swap_chain.h  window.h
src/assets/: AssetsSystem.cpp  AssetsSystem.h  Texture.cpp  Texture.h  model.cpp  model.h
src/logic/: LightSystem.cpp  LightSystem.h  Scene.h  first_app.cpp  first_app.h  game_object.cpp  game_object.h
src/marerials/: FractalMaterialInstance.h  LitMaterialInstance.h  Material.h  MaterialInstance.h  MaterialSystem.cpp  MaterialSystem.h  PBRMaterialInstance.h
src/systems/: BlackHoleRenderSystem.cpp  BlackHoleRenderSystem.h  DissolveRenderSystem.cpp  DissolveRenderSystem.h  LitRenderSystem.cpp  LitRenderSystem.h  SkyBoxRenderSystem.cpp  SkyBoxRenderSystem.h  TransfusionRenderSystem.cpp  TransfusionRenderSystem.h  UniversalRenderSystem.cpp  UniversalRenderSystem.h  point_light_system.cpp  point_light_system.h  simple_render_system.cpp  simple_render_system.h
src/utils/: camera.cpp  frame_info.h  keyboard_movement_controller.cpp  keyboard_movement_controller.h  renderer.cpp  renderer.h  utils.h
src/vulkan_utils/: CubeMap.cpp  CubeMap.h  buffer.h  descriptors.cpp  descriptors.h  pipeline.cpp  swap_chain.cpp  swap_chain.h  window.cpp  window.h
test/: main.cpp
